# IPP-PhoneNumbers

./: .gitignore  CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
src/: arrayUtils.c  arrayUtils.h  list.c  list.h  phone_forward.c  phone_forward.h  phone_forward_example.c  string_number.c  string_number.h  trie.c  trie.h
